--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <script>
       //Your web app's Firebase configuration
-
+      const firebaseConfig = {
+  apiKey: "AIzaSyAYC7rW5PY_PQD4qAvs_Tw2pzwslw752PA",
+  authDomain: "multiplayer-car-racing-g-4373b.firebaseapp.com",
+  databaseURL: "https://multiplayer-car-racing-g-4373b.firebaseio.com",
+  projectId: "multiplayer-car-racing-g-4373b",
+  storageBucket: "multiplayer-car-racing-g-4373b.appspot.com",
+  messagingSenderId: "1076318024660",
+  appId: "1:1076318024660:web:e032d9b8a24d9327949c41"
+};
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
 
