--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 
     <script>
       //Your web app's Firebase configuration
-      const firebaseConfig = {
-  apiKey: "AIzaSyAYC7rW5PY_PQD4qAvs_Tw2pzwslw752PA",
-  authDomain: "multiplayer-car-racing-g-4373b.firebaseapp.com",
-  databaseURL: "https://multiplayer-car-racing-g-4373b.firebaseio.com",
-  projectId: "multiplayer-car-racing-g-4373b",
-  storageBucket: "multiplayer-car-racing-g-4373b.appspot.com",
-  messagingSenderId: "1076318024660",
-  appId: "1:1076318024660:web:e032d9b8a24d9327949c41"
+ // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+  apiKey: "AIzaSyCPuLmRBq3av8KYt9S9k4lBLnY7N9ostoQ",
+  authDomain: "fighting-game-985bb.firebaseapp.com",
+  databaseURL: "https://fighting-game-985bb.firebaseio.com",
+  projectId: "fighting-game-985bb",
+  storageBucket: "fighting-game-985bb.appspot.com",
+  messagingSenderId: "382705458875",
+  appId: "1:382705458875:web:26ff742db2ff0e7cc1d39e",
+  measurementId: "G-0Y8KTE9LTE"
 };
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
